--- a/debian/changelog
+++ b/debian/changelog
@@ -3,3 +3,9 @@ unisonweb (0.0.1~M1k-1) UNRELEASED; urgency=low
   * new upstream release
 
  -- Stew O'Connor <stew@vireo.org>  Mon, 04 May 2020 15:23:13 -0700
+
+unisonweb (0.0.1~M1j-1) UNRELEASED; urgency=low
+
+  * Initial release
+
+ -- Stew O'Connor <stew@vireo.org>  Tue, 28 Apr 2020 13:45:28 -0700
